--- a/wp-content/languages/ru_RU.po
+++ b/wp-content/languages/ru_RU.po
@@ -18557,7 +18557,7 @@ msgid "<strong>Error:</strong> Please enter a username or email address."
 msgstr "<strong>Ошибка</strong>: Введите имя пользователя или email."
 
 #: wp-login.php:158
-msgid "Powered by WordPress"
+msgid "Powered by QSA"
 msgstr "Сайт работает на WordPress"
 
 #. translators: 1: WordPress version number, 2: Minimum required MySQL version
